--- a/layout6.html
+++ b/layout6.html
@@ -19,32 +19,54 @@
                     <li><a href="#">Endereço</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>
-
             </nav>
-
         </header>
-        <section>
-            <article>
+        <section id="nossa_loja">
+            <article id="sobre_intrumentos">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis reiciendis in aut blanditiis
+                    fugit? Similique corporis exercitationem illo nemo deleniti sequi debitis unde molestias beatae,
+                    voluptate itaque, tempora sunt eaque.
+                </p>
 
             </article>
-
             <article>
-
+                <img src="img_layouts/loja.jpg"/>
             </article>
         </section>
 
-        <section>
-            <div>
-
+        <section id="guitarrinhas">
+            <div id="guitarra1">
+                <img src="img_layouts/guitarrinha.jpg"/>
+                <p>VIOLÃO YAMAHA C70 II
+                    CLÁSSICO NYLON ACÚSTICO
+                    NATURAL BRILHANTE
+                    R$ 989,50
+                </p>
             </div>
-            <div>
-
+            <div id="guitarra2">
+                <img src="img_layouts/guitarrinha.jpg"/>
+                <p>VIOLÃO YAMAHA C70 II
+                    CLÁSSICO NYLON ACÚSTICO
+                    NATURAL BRILHANTE
+                    R$ 989,50
+                </p>
             </div>
-            <div>
-
+            <div id="guitarra3">
+                <img src="img_layouts/guitarrinha.jpg"/>
+                <p>VIOLÃO YAMAHA C70 II
+                    CLÁSSICO NYLON ACÚSTICO
+                    NATURAL BRILHANTE
+                    R$ 989,50
+                </p>
             </div>
-            <div>
-
+            <div id="guitarra4">
+                <img src="img_layouts/guitarrinha.jpg"/>
+                <p>VIOLÃO YAMAHA C70 II
+                    CLÁSSICO NYLON ACÚSTICO
+                    NATURAL BRILHANTE
+                    R$ 989,50
+                </p>
             </div>
         </section>
         <article>
